--- a/contact info.html
+++ b/contact info.html
@@ -13,12 +13,12 @@
       </tr>
       <tr>
         <td>Contact no:</td>
-        <td>9340648725</td>
+        <td>90000000</td>
       </tr>
       <tr>
         <td>My Address:</td>
-        <td>108 Jasper, Siddhi Saffron City,
-         Vineet Kunj B-sector, Kolar Road, Bhopal</td>
+        <td>108 Jasper, White Villa,
+         B-sector, Rajeev Road, Ahemdabad</td>
       </tr>
     </table>
     <hr>
