--- a/contact info.html
+++ b/contact info.html
@@ -9,7 +9,7 @@
     <table cellspacing="10">
       <tr>
         <td>Email id:</td>
-        <td>akshatpare25@gmail.com</td>
+        <td>akshat@gmail.com</td>
       </tr>
       <tr>
         <td>Contact no:</td>
